--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/professinalsidd/vs-code-theme-extension"
+  },
   "contributes": {
     "themes": [
       {
