--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publisher": "professionalsidd",
   "description": "A sleek and modern dark theme designed for developers who prefer a visually relaxing environment. Dim Dark offers a balanced contrast that reduces eye strain, making it perfect for extended coding sessions. Enjoy a clean and focused workspace that highlights your code without overwhelming your senses.",
   "icon": "DimDark.png",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.95.0"
   },
@@ -15,6 +15,15 @@
     "type": "git",
     "url": "https://github.com/professinalsidd/vs-code-theme-extension"
   },
+  "keywords": [
+    "dark theme",
+    "VS Code theme",
+    "dim dark",
+    "developer theme",
+    "relaxing",
+    "coding",
+    "dark mode"
+  ],
   "contributes": {
     "themes": [
       {
